# rbatis

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  README_CN.md  Readme.md  WhoUse.md  ai.md  ai_cn.md  check.sh  codecov.yml  dyn_sql.md  log4rs.yaml  mybatis-3-mapper.dtd  publish.cmd  publish.sh  rbatis-mapper.dtd  roadmap.md  roadmap_ch.md  test.sh  wrk.md
example/: Cargo.toml  Readme.md  build.rs  example.html  example.py  example_include.html  example_sqls.html  py_sql.sql  rbatis.sqlite  rbatis.sqlite-shm  rbatis.sqlite-wal  readme.md  table_mysql.sql  table_postgres.sql  table_sqlite.sql
example/src/: Example_ActivityMapper.xml  activity.rs  crud.rs  crud_delete.rs  crud_insert.rs  crud_json.rs  crud_map.rs  crud_select.rs  crud_select_page.rs  crud_sql.rs  crud_test.rs  crud_update.rs  crud_update_skip.rs  custom_pool.rs  custom_py_sql_test.rs  database.sql  dyn_table_name.rs  dyn_table_test.rs  executor.rs  format.rs  format_test.rs  get_fields.rs  html_sql_test.rs  ids_test.rs  improve_code_maintainability.rs  init.rs  intercept_test.rs  lib.rs  log.rs  macro_proc_htmlsql.rs  macro_proc_htmlsql_an_file.rs  macro_proc_htmlsql_custom_func.rs  macro_proc_htmlsql_file.rs  macro_proc_htmlsql_file2.rs  macro_proc_htmlsql_file_update.rs  macro_proc_htmlsql_func.rs  macro_proc_htmlsql_module.rs  macro_proc_htmlsql_page.rs  macro_proc_htmlsql_page2.rs  macro_proc_htmlsql_page_file.rs  (+49 more)
example/src/actix_web/: main.rs
example/src/actix_web_test/: main.rs
example/src/axum/: main.rs
example/src/hyper/: main.rs
example/src/hyper_test/: main.rs
example/src/ntex/: main.rs
example/src/rocket/: main.rs
example/src/salvo/: main.rs
example/src/tide/: main.rs
example/src/tide_test/: main.rs
example/src/warp/: main.rs
example/src/warp_test/: main.rs
rbatis-codegen/: Cargo.toml  Readme.md  mybatis-3-mapper.dtd
rbatis-codegen/src/: bencher.rs  error.rs  into_sql.rs  lib.rs  ops.rs  ops_add.rs  ops_bit_and.rs  ops_bit_or.rs  ops_cmp.rs  ops_div.rs  ops_eq.rs  ops_mul.rs  ops_neg.rs  ops_not.rs  ops_rem.rs  ops_shl.rs  ops_shr.rs  ops_string.rs  ops_sub.rs  ops_xor.rs  sql_replace.rs  string_util.rs
rbatis-codegen/src/code_gen/: element_from.rs  func.rs  html_loader.rs  mod.rs  parser.rs
rbatis-codegen/src/codegen/: element_from.rs  func.rs  html_loader.rs  loader_html.rs  mod.rs  parser.rs  parser_html.rs  parser_pysql.rs  parser_pysql_pest.rs  pysql.pest  string_util.rs
rbatis-codegen/tests/: error_test.rs  from_bool_extended_test.rs  from_bool_test.rs  func_extended_test.rs  func_test.rs  into_sql_extended_test.rs  into_sql_test.rs  loader_html_extended_test.rs  loader_html_test.rs  ops_add_test.rs  ops_bit_and_test.rs  ops_bit_or_test.rs  ops_cmp_test.rs  ops_div_test.rs  ops_eq_test.rs  ops_mul_test.rs  ops_neg_simple_test.rs  ops_neg_test.rs  ops_not_simple_test.rs  ops_not_test.rs  ops_rem_test.rs  ops_string_extended_test.rs  ops_string_test.rs  ops_sub_test.rs  ops_xor_test.rs  parser_html_test.rs  parser_pysql_nodes.rs  parser_pysql_nodes2.rs  parser_pysql_pest_test.rs  parser_pysql_test.rs  string_util_test.rs  syntax_tree_html_test.rs  syntax_tree_pysql_test.rs
rbatis-core/: Cargo.toml  README.md  publish.cmd  publish.sh  readme.md
rbatis-core/example/: Cargo.toml  docker_mssql.sh  pg.sql
rbatis-core/example/src/: bencher.rs  main.rs
rbatis-core/src/: arguments.rs  connection.rs  convert.rs  cursor.rs  db.rs  db_adapter.rs  decode.rs  encode.rs  error.rs  executor.rs  lib.rs  lock.rs  query_as.rs  row.rs  runtime.rs  snowflake.rs  sqlx_db.rs  sync_map.rs  transaction.rs  types.rs  value.rs
rbatis-core/src/db/: bind_mssql.rs  bind_mysql.rs  bind_pg.rs  bind_sqlite.rs  db_adapter.rs  mod.rs
rbatis-core/src/errors/: mod.rs
rbatis-core/src/io/: buf_stream.rs  tls.rs
rbatis-macro-driver/: Cargo.toml  Readme.md
rbatis-macro-driver/src/: crud_enable.rs  lib.rs  py_sql.rs  sql.rs  string_util.rs  table.rs  util.rs
rbatis-sql/: Cargo.toml  Readme.md  publish.cmd  publish.sh
rbatis-sql/rbatis-sql-macro/: Cargo.toml
rbatis-sql/rbatis-sql-util/: Cargo.toml
rbatis-sql/src/: bencher.rs  error.rs  from_bool.rs  from_sql.rs  lib.rs  ops.rs  ops_add.rs  ops_bit_and.rs  ops_bit_or.rs  ops_cmp.rs  ops_div.rs  ops_eq.rs  ops_index.rs  ops_mul.rs  ops_not.rs  ops_rem.rs  ops_sub.rs  ops_xor.rs  sql_replace.rs  string_util.rs
rbatis_macro/: Cargo.toml
rbatis_macro/src/: lib.rs
rbdc/: Cargo.toml  Readme.md  Readme_ch.md  readme.md  readme_ch.md
rbdc-mssql/: Cargo.toml  Readme.md
rbdc-mssql/src/: decode.rs  driver.rs  encode.rs  lib.rs
rbdc-mysql/: Cargo.toml  Readme.md
rbdc-mysql/src/: collation.rs  conn.rs  decode.rs  describe.rs  driver.rs  encode.rs  error.rs  lib.rs  meta_data.rs  query.rs  query_result.rs  result_set.rs  row.rs  stmt.rs  value.rs
rbdc-oracle/: Cargo.toml
rbdc-oracle/src/: lib.rs
rbdc-pg/: Cargo.toml  Readme.md
rbdc-pg/src/: arguments.rs  column.rs  driver.rs  error.rs  lib.rs  meta_data.rs  query.rs  query_result.rs  row.rs  statement.rs  type_info.rs  value.rs
rbdc-pool/: Cargo.toml
rbdc-pool-deadpool/: Cargo.toml  readme.md
rbdc-pool-deadpool/src/: lib.rs
rbdc-pool-fast/: Cargo.toml  readme.md
rbdc-pool-fast/src/: atomic_dur.rs  lib.rs
rbdc-pool-mobc/: Cargo.toml  readme.md
rbdc-pool-mobc/src/: lib.rs
rbdc-pool/src/: lib.rs
rbdc-sqlite/: Cargo.toml  Readme.md
rbdc-sqlite/src/: arguments.rs  column.rs  database.rs  decode.rs  driver.rs  encode.rs  error.rs  lib.rs  query.rs  query_result.rs  row.rs  type_info.rs  value.rs
rbdc/src/: db.rs  decode.rs  encode.rs  error.rs  lib.rs  pool.rs  rt.rs  ser.rs  time.rs
rbdc/src/ext/: mod.rs  (+2 more)
rbexec/: Cargo.toml  Readme.md
rbexec/src/: crud.rs  decode.rs  executor.rs  lib.rs  page.rs
rbmp-serde/: Cargo.toml
rbmp-serde/src/: decode.rs  encode.rs  lib.rs
rbmpv/: Cargo.toml
rbmpv/src/: lib.rs
rbs/: Cargo.toml  Readme.md  readme.md
rbs/src/: config.rs  decode.rs  encode.rs  error.rs  index.rs  lib.rs  macros.rs  rbox.rs  vbox.rs
rbs/tests/: error_test.rs  to_value_macro_test.rs  value_serde_test.rs  value_test.rs
(+927 files in other folders)
