[workspace]
members = [
    "rbs",
    "rbdc",
    "rbatis-codegen",
    "rbdc-mysql",
    "rbdc-pg",
    "rbdc-sqlite",
    "rbdc-mssql",
    "rbatis-macro-driver",
    "rbdc-pool-fast"]

[package]
name = "rbatis"
version = "4.5.19"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
edition = "2021"
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://docs.rs/rbatis/latest"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"

[features]
default = ["rbatis-macro-driver/default"]
#debug_mode feature will show decode json data
debug_mode = ["rbatis-macro-driver/debug_mode","rbs/debug_mode"]
#support upper case sql keyword
upper_case_sql_keyword = []

[dependencies]
rbatis-codegen = { version = "4.5", path = "rbatis-codegen" }
rbatis-macro-driver = { version = "4.5", path = "rbatis-macro-driver", default-features = false, optional = true }
serde = "1"
#log
log = "0.4"
futures-core = { version = "0.3" }
futures = { version = "0.3" }
#object_id
hex = "0.4"
rand = "0.8"
rbs = { version = "4.5", path = "rbs" }
rbdc = { version = "4.5", path = "rbdc", default-features = false }
dark-std = "0.2"
async-trait = "0.1.68"

rbdc-pool-fast = { version = "4.5", path = "rbdc-pool-fast" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["sync", "fs", "net", "rt", "rt-multi-thread", "time", "io-util", "macros"] }
rbdc-mysql = { path = "rbdc-mysql" }
rbdc-pg = { path = "rbdc-pg" }
rbdc-sqlite = { path = "rbdc-sqlite" }
rbdc-mssql = { path = "rbdc-mssql" }
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
