[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2021"
publish = false


[[bin]]
name = "macro_proc_htmlsql"
path = "src/macro_proc_htmlsql.rs"

[[bin]]
name = "macro_proc_htmlsql_custom_func"
path = "src/macro_proc_htmlsql_custom_func.rs"

[[bin]]
name = "macro_proc_pysql"
path = "src/macro_proc_pysql.rs"

[[bin]]
name = "macro_proc_rawsql"
path = "src/macro_proc_rawsql.rs"

[[bin]]
name = "crud"
path = "src/crud.rs"
[[bin]]
name = "plugin_table_sync"
path = "src/plugin_table_sync.rs"
[[bin]]
name = "transaction"
path = "src/transaction.rs"
[[bin]]
name = "raw_sql"
path = "src/raw_sql.rs"
[[bin]]
name = "macro_proc_htmlsql_page"
path = "src/macro_proc_htmlsql_page.rs"
[[bin]]
name = "macro_proc_htmlsql_an_file"
path = "src/macro_proc_htmlsql_an_file.rs"
[[bin]]
name = "table_extend"
path = "src/table_extend.rs"
[dependencies]
#serde and base types
serde = { version = "1", features = ["derive"] }
rbs={version="0.1",path="../rbs"}
serde_json = "1"
fastdate = { version = "0.1"}
once_cell = "1.9.0"
bigdecimal = { version = "0.2.0", features = ["serde"] }
#log lib
log = "0.4"
fast_log = "1.5"
#async runtime lib
tokio = { version = "1", features = ["full"] }
rbatis = { path = "../", features = ["debug_mode"]}
rbdc-sqlite={path="../rbdc-sqlite"}
rbdc-mysql={path="../rbdc-mysql"}
rbdc-pg={path="../rbdc-pg"}