[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2021"
publish = false


[[bin]]
name = "macro_proc_htmlsql"
path = "src/macro_proc_htmlsql.rs"

[[bin]]
name = "macro_proc_htmlsql_custom_func"
path = "src/macro_proc_htmlsql_custom_func.rs"

[[bin]]
name = "macro_proc_pysql"
path = "src/macro_proc_pysql.rs"

[[bin]]
name = "macro_proc_rawsql"
path = "src/macro_proc_rawsql.rs"

[[bin]]
name = "crud"
path = "src/crud.rs"
[[bin]]
name = "crud_map"
path = "src/crud_map.rs"
[[bin]]
name = "crud_sql"
path = "src/crud_sql.rs"
[[bin]]
name = "crud_json"
path = "src/crud_json.rs"
[[bin]]
name = "plugin_table_sync"
path = "src/plugin_table_sync.rs"
[[bin]]
name = "transaction"
path = "src/transaction.rs"
[[bin]]
name = "raw_sql"
path = "src/raw_sql.rs"
[[bin]]
name = "macro_proc_htmlsql_page"
path = "src/macro_proc_htmlsql_page.rs"
[[bin]]
name = "macro_proc_htmlsql_page2"
path = "src/macro_proc_htmlsql_page2.rs"
[[bin]]
name = "macro_proc_htmlsql_an_file"
path = "src/macro_proc_htmlsql_file.rs"
[[bin]]
name = "table_extend"
path = "src/table_extend.rs"
[[bin]]
name = "plugin_intercept"
path = "src/plugin_intercept.rs"
[[bin]]
name = "pool_custom"
path = "src/pool_custom.rs"
[[bin]]
name = "rbatis_log"
path = "src/rbatis_log.rs"
[dependencies]
#serde and base types
serde = { version = "1", features = ["derive"] }
rbs={version="4.3",path="../rbs"}
serde_json = "1"
fastdate = { version = "0.1"}
#log lib
log = "0.4"
fast_log = "1.5"
#async runtime lib
tokio = { version = "1", features = ["full"] }
rbatis = { path = "../", features = ["debug_mode"]}
rbdc-sqlite={path="../rbdc-sqlite"}
rbdc-mysql={path="../rbdc-mysql"}
rbdc-pg={path="../rbdc-pg"}