[package]
name = "rbatis-codegen"
version = "4.0.10"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL gen system"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["async", "orm", "mysql", "postgres", "sqlite", "mssql", "oracle"]
documentation = "https://rbatis.github.io/rbatis.io/#/en/"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io/#/en/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
#default is fast_mode
default = []
debug_mode = []

[dependencies]
#serde
serde = { version = "1", features = ["derive"] }
rbs = { version = "0.1", path = "../rbs" }
serde_json = "1"

#macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
base64 = "0.13"
async-trait = "0.1"
url = "2.2.2"
html_parser = "0.6.3"