[package]
name = "rbatis-core"
version = "3.1.9"
description = "Core of rbatis, the rust SQL toolkit. Not intended to be used directly."
license = "Apache-2.0"
edition = "2018"
authors = [
    "zxj <zhuxiujia@qq.com>"
]
documentation = "https://rbatis.github.io/rbatis.io/#/en/"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io/#/en/"

[features]
default = ["all-database","runtime-async-std-rustls"]
debug_mode = []
all-database = ["sqlx-core/all-databases", "mysql", "postgres", "sqlite", "mssql", "bit-vec"]
mysql = ["sqlx-core/mysql"]
postgres = ["sqlx-core/postgres", "bit-vec"]
sqlite = ["sqlx-core/sqlite"]
mssql = ["sqlx-core/mssql"]

runtime-tokio-rustls = ["sqlx-core/runtime-tokio-rustls"]
runtime-tokio-native-tls = ["sqlx-core/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sqlx-core/runtime-actix-rustls"]
runtime-actix-native-tls = ["sqlx-core/runtime-actix-native-tls"]
runtime-async-std-rustls = ["sqlx-core/runtime-async-std-rustls"]
runtime-async-std-native-tls = ["sqlx-core/runtime-async-std-native-tls"]

format_bson = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value","preserve_order"] }
rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
log = { version = "0.4", default-features = false }
lazy_static = "1.4"
ipnetwork = { version = "0.17", features = ["serde"] }
sqlx-core = { version = "0.5", features = ["offline","chrono", "bigdecimal", "decimal","json", "uuid", "bit-vec"], optional = true }
uuid = { version = "0.8", features = ["serde", "v4"] }
time = { version = "0.2.16", features = ["serde"] }
#only pg
bit-vec = { version = "0.6", features = ["serde"], optional = true }
bigdecimal_ = { version = "0.2.0", package = "bigdecimal", features = ["serde"] }
base64 = "0.13.0"
hex = "0.4"