[package]
name = "rbatis-core"
version = "4.0.0"
description = "Core of rbatis, the rust SQL toolkit. Not intended to be used directly."
license = "Apache-2.0"
edition = "2021"
authors = [
    "zxj <zhuxiujia@qq.com>"
]
documentation = "https://rbatis.github.io/rbatis.io/#/en/"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io/#/en/"

[features]
default = []
debug_mode = []
format_bson = []
[dependencies]
rbs={version="0.1",path="../rbs"}
rbdc = { path = "../rbdc" }
serde = { version = "1", features = ["derive"] }
log = { version = "0.4", default-features = false }