[package]
name = "rbatis_sql"
version = "3.0.26"
description = "Rust Json Object access macro"
authors = ["zhuxiujie <zhuxiujia@qq.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
#default is fast_mode
default = []
debug_mode = ["rbatis_sql_macro/debug_mode"]

[dependencies]
#serde
serde = { version = "1", features = ["derive"] }
rbson = "2.0.4"
rbatis_sql_macro = { version = "3.0.17", path = "rbatis-sql-macro" }