[package]
name = "rbatis-sql"
version = "4.0.0"
description = "Rust Json Object access macro"
authors = ["zhuxiujie <zhuxiujia@qq.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
#default is fast_mode
default = []
debug_mode = ["rbatis_sql_macro/debug_mode"]

[dependencies]
#serde
serde = { version = "1", features = ["derive"] }
rbs = {path="../rbs"}
rbatis_sql_macro = { version = "4.0.0", path = "rbatis-sql-macro" }
serde_json = "1"