[package]
name = "rbdc-mssql"
version = "4.5.1"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tls-rustls"]
tls-rustls=["rbdc/tls-rustls","tiberius/rustls"]
tls-native-tls=["rbdc/tls-native-tls","tiberius/native-tls"]
[dependencies]
rbs = { version = "4.5", path = "../rbs" }
rbdc = { version = "4.5", path = "../rbdc", default-features = false, optional = true }
tiberius = { version = "0.12", default-features = false, features = ["chrono", "bigdecimal", "rust_decimal", "tds73"], optional = true }
tokio = { version = "1", features = ["sync", "fs", "net", "rt", "rt-multi-thread", "time", "io-util"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
futures-io = { version = "0.3.21", features = ["std"] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.21", features = ["alloc", "sink"] }
chrono = "0.4.19"
rust_decimal = "1.25.0"
byteorder = "1.4.3"
uuid = "1.1.2"
log = "0.4"
fastdate = { version = "0.3" }