[package]
name = "rbdc-mysql"
version = "0.1.6"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
documentation = "https://rbatis.github.io/rbatis.io/#/en/"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io/#/en/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs = { version = "0.1", path = "../rbs" }
bytes = "1.1.0"
rbdc = { version = "0.1", path = "../rbdc" }
serde = "1"
bitflags = "1.3.2"
digest = { version = "0.10.0", default-features = false, features = ["std"] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.21", features = ["alloc", "sink"] }
generic-array = { version = "0.14.4", default-features = false }
rsa = { version = "0.6.0" }
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }
sha-1 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
percent-encoding = "2.1.0"
url = { version = "2.2.2" }
log = "0.4"
smallvec = "1.7.0"
either = "1.7.0"
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
fastdate = "0.1"
hex = "0.4.3"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }