[package]
name = "rbdc-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs={version="0.1",path="../rbs"}
rbdc = { path = "../rbdc" }
#sibyl = {version="0.6.9",default-features=false,features=["nonblocking","tokio"]}
oracle = "0.5.5"
flume = { version = "0.10.9", default-features = false, features = ["async"] }
serde = "1"
serde_json = "1"
[dev-dependencies]
tokio = {version="1",features = ["full"]}