[package]
name = "rbdc-oracle"
version = "0.1.0"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
documentation = "https://rbatis.github.io/rbatis.io/#/en/"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io/#/en/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs={version="0.1",path="../rbs"}
rbdc = { path = "../rbdc" }
#sibyl = {version="0.6.9",default-features=false,features=["nonblocking","tokio"]}
oracle = "0.5.5"
flume = { version = "0.10.9", default-features = false, features = ["async"] }
serde = "1"
serde_json = "1"
[dev-dependencies]
tokio = {version="1",features = ["full"]}