[package]
name = "rbdc-pg"
version = "0.1.13"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io/#/en/"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io/#/en/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbs={version="0.1",path="../rbs"}
rbdc = { version = "0.1", path = "../rbdc" }
bytes ="1.1.0"
log="0.4"
serde = {version="1", features = ["derive", "rc"]}
futures-core = { version = "0.3.19", default-features = false }
futures-util = {version="0.3.21",features = ["alloc", "sink"]}
futures-channel = { version = "0.3.19", default-features = false, features = ["sink", "alloc", "std"] }
memchr = { version = "2.4.1", default-features = false }
smallvec = "1.7.0"
either = "1.7.0"
stringprep = "0.1.2"
atoi = "1.0.0"
itoa = "1.0.2"
byteorder = { version = "1.4.3", features = ["std"] }
hmac = { version = "0.12.0", default-features = false}
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }
sha2 = { version = "0.10.0", default-features = false }
md-5 = "0.10"
percent-encoding = "2.1.0"
url="2.2.2"
base64="0.13.0"
dirs = { version = "4.0.0" }
whoami = { version = "1.2.1" }
fastdate = { version = "0.1"}
bigdecimal = "0.3.0"
num-bigint="0.4.3"
[dev-dependencies]
tokio = {version="1",features = ["full"]}
