[package]
name = "rbdc-pg"
version = "4.4.9"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tls-rustls"]
tls-rustls=["rbdc/tls-rustls"]
tls-native-tls=["rbdc/tls-native-tls"]
[dependencies]
rbs = { version = "4.4", path = "../rbs" }
rbdc = { version = "4.4", path = "../rbdc", default-features = false, optional = true }
bytes = "1.1.0"
log = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.21", features = ["alloc", "sink"] }
futures-channel = { version = "0.3.19", default-features = false, features = ["sink", "alloc", "std"] }
memchr = { version = "2.4.1", default-features = false }
smallvec = "1.7.0"
either = "1.7.0"
stringprep = "0.1.2"
atoi = "2.0.0"
itoa = "1.0.2"
byteorder = { version = "1.4.3", features = ["std"] }
hmac = { version = "0.12.0", default-features = false }
rand = { version = "0.8.4", default-features = false, features = ["std", "std_rng"] }
sha2 = { version = "0.10.0", default-features = false }
md-5 = "0.10"
percent-encoding = "2.1.0"
url = "2.2.2"
base64 = "0.21.0"
dirs = { version = "5.0.0" }
whoami = { version = "1.2.1" }
fastdate = { version = "0.3" }
bigdecimal = {version = "0.4.1",features = ["serde"]}
num-bigint = "0.4.3"
uuid = { version = "1.1", features = ["v4"] }
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
