[package]
name = "rbdc-pool-fast"
version = "4.5.9"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures-core = { version = "0.3" }
rbs = { version ="4.5", path = "../rbs" }
rbdc = { version ="4.5", path = "../rbdc" ,default-features = false}
fast_pool = {version = "0.2.0" }
dark-std = "0.2"
log = "0.4.21"